@@ -58,7 +58,6 @@ import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.radarbase.auth.authorization.Permission.SUBJECT_CREATE;
@@ -210,7 +209,8 @@ public class SubjectResource {
 
         // In principle this is already captured by the PostUpdate event listener, adding this
         // event just makes it more clear a subject was discontinued.
-        eventRepository.add(new AuditEvent(SecurityUtils.getCurrentUserLogin(),
+        eventRepository.add(new AuditEvent(
+                SecurityUtils.getCurrentUserLogin().orElse(null),
                 "SUBJECT_DISCONTINUE", "subject_login=" + subjectDto.getLogin()));
         SubjectDTO result = subjectService.discontinueSubject(subjectDto);
         return ResponseEntity.ok()
@@ -238,7 +238,7 @@ public class SubjectResource {
         List<String> authoritiesToInclude = subjectCriteria.getAuthority().stream()
                 .filter(Objects::nonNull)
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
 
         if (projectName != null && externalId != null) {
             Optional<List<SubjectDTO>> subject = subjectRepository
